Rewrite with DI and RxJava and prepare for changed app flow

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,14 +7,14 @@ max_line_length = 120
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{kt}]
+[*.kt]
 continuation_indent_size = 4
 
 [*.{java,gradle}]
 continuation_indent_size = 8
 
-[*.{yml}]
+[*.yml]
 indent_size = 2
 
-[*.{md}]
+[*.md]
 trim_trailing_whitespace = false
