--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,12 +58,22 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
-    implementation "androidx.appcompat:appcompat:$androidXVersion"
-    implementation "androidx.cardview:cardview:$androidXVersion"
-    implementation "androidx.recyclerview:recyclerview:$androidXVersion"
+    implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "androidx.cardview:cardview:$recyclerviewVersion"
+    implementation "androidx.recyclerview:recyclerview:$cardviewVersion"
+    implementation "com.google.android.material:material:$materialDesignVersion"
 
-    implementation "com.google.android.material:material:$androidXVersion"
     implementation "com.google.android.gms:play-services-nearby:$playServicesVersion"
+
+    implementation "org.koin:koin-core:$koinVersion"
+    implementation "org.koin:koin-android:$koinVersion"
+    implementation "org.koin:koin-android-architecture:$koinVersion"
+
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "com.jakewharton.rxbinding2:rxbinding:$rxBindingVersion"
+    implementation "com.uber.autodispose:autodispose-ktx:$autodisposeVersion"
+    implementation "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodisposeVersion"
+    implementation "com.gojuno.koptional:koptional-rxjava2-extensions:$kOptionlVersion"
 
     implementation "com.squareup.moshi:moshi:$moshiVersion"
     implementation "com.github.rubengees:kotterknife:$kotterknifeVersion"
