--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -1,1 +1,18 @@
-failfast: true
+failFast: true
+
+comments:
+  UndocumentedPublicClass:
+    active: false
+  UndocumentedPublicFunction:
+    active: false
+
+potential-bugs:
+  UnsafeCast:
+    active: false
+
+style:
+  ExpressionBodySyntax:
+    active: false
+  ForbiddenComment:
+    active: true
+    values: 'FIXME:,STOPSHIP:'
