--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,5 +8,5 @@ check_android_task:
     folder: ~/.gradle/caches
   check_script: ./gradlew build
   cleanup_before_cache_script:
-  - rm -rf ~/.gradle/caches/$GRADLE_VERSION/
+  - rm -rf ~/.gradle/caches/[0-9]*
   - find ~/.gradle/caches/ -name "*.lock" -type f -delete
