--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
         androidGradlePluginVersion = "3.3.0-alpha08"
         gradleVersionsPluginVersion = "0.20.0"
         junitPluginVersion = "1.2.0.0"
-        ktlintGradleVersion = "5.0.0"
-        ktlintVersion = "0.27.0"
+        ktlintGradleVersion = "5.1.0"
+        ktlintVersion = "0.28.0"
         detektVersion = "1.0.0.RC8"
         jacocoPluginVersion = "0.12.0"
         jacocoVersion = "0.8.2"
@@ -24,13 +24,14 @@ buildscript {
         cardviewVersion = "1.0.0-rc02"
         materialDesignVersion = "1.0.0-rc01"
 
-        rxJavaVersion = "2.2.1"
+        rxJavaVersion = "2.2.2"
+        rxKotlinVersion = "2.3.0"
         rxAndroidVersion = "2.1.0"
         rxBindingVersion = "2.1.1"
         autodisposeVersion = "1.0.0-RC2"
         kOptionalVersion = "1.6.0"
 
-        koinVersion = "1.0.0-RC-2"
+        koinVersion = "1.0.0-RC-3"
         kotterknifeVersion = "2.0"
 
         moshiVersion = "1.6.0"
@@ -42,7 +43,7 @@ buildscript {
 
         strictModeCompatVersion = "0b97c52b72"
 
-        junitVersion = "5.3.0"
+        junitVersion = "5.3.1"
         kluentVersion = "1.41"
         mockkVersion = "1.8.7"
         kotlinJsonAssertVersion = "0.1.0"
@@ -172,6 +173,8 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:$rxBindingVersion"
     implementation "com.uber.autodispose:autodispose-ktx:$autodisposeVersion"
     implementation "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodisposeVersion"
