--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,11 @@ buildscript {
 
         kotlinVersion = "1.2.61"
         playServicesVersion = "15.0.1"
-        kickprotocolVersion = "9cb1f1b69d"
+        kickprotocolVersion = "9f2ea9ec31"
 
         lifecycleVersion = "2.0.0-rc01"
 
-        androidGradlePluginVersion = "3.3.0-alpha08"
+        androidGradlePluginVersion = "3.3.0-alpha10"
         gradleVersionsPluginVersion = "0.20.0"
         junitPluginVersion = "1.2.0.0"
         ktlintGradleVersion = "5.1.0"
@@ -22,6 +22,7 @@ buildscript {
         appcompatVersion = "1.0.0-rc02"
         recyclerviewVersion = "1.0.0-rc02"
         cardviewVersion = "1.0.0-rc02"
+        constraintlayoutVersion = "1.1.3"
         materialDesignVersion = "1.0.0-rc01"
 
         rxJavaVersion = "2.2.2"
@@ -160,6 +161,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.cardview:cardview:$recyclerviewVersion"
     implementation "androidx.recyclerview:recyclerview:$cardviewVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     implementation "com.google.android.material:material:$materialDesignVersion"
 
     implementation "com.google.android.gms:play-services-nearby:$playServicesVersion"
