--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         gradleVersion = "4.10"
 
-        kotlinVersion = "1.2.61"
+        kotlinVersion = "1.2.70"
         playServicesVersion = "15.0.1"
         kickprotocolVersion = "9f2ea9ec31"
 
@@ -15,38 +15,40 @@ buildscript {
         junitPluginVersion = "1.2.0.0"
         ktlintGradleVersion = "5.1.0"
         ktlintVersion = "0.28.0"
-        detektVersion = "1.0.0.RC8"
+        detektVersion = "1.0.0.RC9"
         jacocoPluginVersion = "0.12.0"
         jacocoVersion = "0.8.2"
 
         appcompatVersion = "1.0.0-rc02"
         recyclerviewVersion = "1.0.0-rc02"
         cardviewVersion = "1.0.0-rc02"
-        constraintlayoutVersion = "1.1.3"
-        materialDesignVersion = "1.0.0-rc01"
+        constraintlayoutVersion = "2.0.0-alpha2"
+        materialDesignVersion = "1.0.0-rc02"
 
         rxJavaVersion = "2.2.2"
         rxKotlinVersion = "2.3.0"
         rxAndroidVersion = "2.1.0"
+        rxPermissionVersion = "0.10.2"
         rxBindingVersion = "2.1.1"
         autodisposeVersion = "1.0.0-RC2"
         kOptionalVersion = "1.6.0"
 
-        koinVersion = "1.0.0-RC-3"
+        koinVersion = "1.0.0"
         kotterknifeVersion = "2.0"
 
         moshiVersion = "1.6.0"
         retrofitVersion = "2.4.0"
 
-        iconicsVersion = "3.1.0-rc01"
+        iconicsVersion = "3.1.0-rc02"
         materialProgressbarVersion = "1.4.2"
-        communityMaterialTypefaceVersion = "2.0.46.1"
+        communityMaterialTypefaceVersion = "2.7.94.1"
 
         strictModeCompatVersion = "0b97c52b72"
 
         junitVersion = "5.3.1"
         kluentVersion = "1.41"
         mockkVersion = "1.8.7"
+        archTestingVersion = "1.1.1"
         kotlinJsonAssertVersion = "0.1.0"
 
         leakCanaryVersion = "1.6.1"
@@ -175,8 +177,8 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
+    implementation "com.github.tbruyelle:rxpermissions:$rxPermissionVersion"
     implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:$rxBindingVersion"
     implementation "com.uber.autodispose:autodispose-ktx:$autodisposeVersion"
     implementation "com.uber.autodispose:autodispose-android-archcomponents-ktx:$autodisposeVersion"
@@ -194,7 +196,7 @@ dependencies {
 
     implementation "com.github.kirich1409:StrictModeCompat:$strictModeCompatVersion"
 
-    testImplementation "android.arch.core:core-testing:$lifecycleVersion"
+    testImplementation "android.arch.core:core-testing:$archTestingVersion"
 
     testImplementation "com.gregwoodfill.assert:kotlin-json-assert:$kotlinJsonAssertVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
@@ -221,10 +223,12 @@ tasks.withType(KotlinCompile).all {
 detekt {
     version = detektVersion
 
-    profile("main") {
-        input = "$projectDir/src/main/kotlin"
-        config = "$projectDir/config/detekt/detekt.yml"
-        output = "$buildDir/reports/detekt"
+    input = files("$projectDir/src/main/kotlin")
+    config = files("$projectDir/config/detekt/detekt.yml")
+
+    reports {
+        xml.destination = file("${project.buildDir}/reports/detekt/detekt.xml")
+        html.destination = file("${project.buildDir}/reports/detekt/detekt.html")
     }
 }
 
@@ -239,10 +243,6 @@ junitJacoco {
 
 wrapper {
     gradleVersion = project.ext.gradleVersion
-}
-
-afterEvaluate {
-    check.dependsOn detektCheck
 }
 
 static String getFromSecrets(String key) {
