--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         playServicesVersion = "15.0.1"
         kickprotocolVersion = "9f2ea9ec31"
 
+        multidexVersion = '1.0.3'
         lifecycleVersion = "2.0.0"
 
         androidGradlePluginVersion = "3.3.0-alpha10"
@@ -41,6 +42,7 @@ buildscript {
 
         iconicsVersion = "3.1.0"
         materialProgressbarVersion = "1.4.2"
+        materialDialogsVersion = "2.0.0-beta2"
         communityMaterialTypefaceVersion = "2.7.94.1"
 
         strictModeCompatVersion = "0b97c52b72"
@@ -93,6 +95,7 @@ android {
         versionCode 1
         versionName "1.0.0"
 
+        multiDexEnabled true
         resConfigs "en", "de"
     }
 
@@ -160,6 +163,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
+    implementation "com.android.support:multidex:$multidexVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.cardview:cardview:$recyclerviewVersion"
     implementation "androidx.recyclerview:recyclerview:$cardviewVersion"
@@ -192,6 +196,7 @@ dependencies {
     implementation "com.mikepenz:iconics-core:$iconicsVersion@aar"
     implementation "com.mikepenz:iconics-views:$iconicsVersion@aar"
     implementation "com.mikepenz:community-material-typeface:$communityMaterialTypefaceVersion@aar"
+    implementation "com.afollestad.material-dialogs:core:$materialDialogsVersion"
     implementation "me.zhanghai.android.materialprogressbar:library:$materialProgressbarVersion"
 
     implementation "com.github.kirich1409:StrictModeCompat:$strictModeCompatVersion"
