--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,16 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 buildscript {
     ext {
-        gradleVersion = "4.10.2"
+        gradleVersion = "5.0-rc-4"
 
-        kotlinVersion = "1.2.71"
+        kotlinVersion = "1.3.10"
         playServicesVersion = "15.0.1"
         kickprotocolVersion = "9f2ea9ec31"
 
         multidexVersion = '1.0.3'
         lifecycleVersion = "2.0.0"
 
-        androidGradlePluginVersion = "3.3.0-alpha10"
+        androidGradlePluginVersion = "3.4.0-alpha04"
         gradleVersionsPluginVersion = "0.20.0"
         junitPluginVersion = "1.2.0.0"
         ktlintGradleVersion = "5.1.0"
