--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx1536m
+kotlin.code.style=official
+android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.namespacedRClass=true
+android.enableSeparateRClassCompilation=true
