--- a/build.gradle
+++ b/build.gradle
@@ -3,31 +3,31 @@ import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 
 buildscript {
     ext {
-        gradleVersion = "5.0-rc-5"
+        gradleVersion = "5.0"
 
-        kotlinVersion = "1.3.10"
+        kotlinVersion = "1.3.11"
         playServicesVersion = "16.0.0"
         kickprotocolVersion = "9f2ea9ec31"
 
         multidexVersion = '1.0.3'
         lifecycleVersion = "2.0.0"
 
-        androidGradlePluginVersion = "3.4.0-alpha04"
+        androidGradlePluginVersion = "3.4.0-alpha07"
         gradleVersionsPluginVersion = "0.20.0"
         junitPluginVersion = "1.3.1.1"
-        ktlintGradleVersion = "6.3.0"
+        ktlintGradleVersion = "6.3.1"
         ktlintVersion = "0.29.0"
         detektVersion = "1.0.0-RC11"
         jacocoPluginVersion = "0.13.0"
         jacocoVersion = "0.8.2"
 
-        appcompatVersion = "1.0.2"
-        recyclerviewVersion = "1.0.0"
+        appcompatVersion = "1.1.0-alpha01"
+        recyclerviewVersion = "1.1.0-alpha01"
         cardviewVersion = "1.0.0"
         constraintlayoutVersion = "2.0.0-alpha2"
         materialDesignVersion = "1.1.0-alpha01"
 
-        rxJavaVersion = "2.2.3"
+        rxJavaVersion = "2.2.4"
         rxKotlinVersion = "2.3.0"
         rxAndroidVersion = "2.1.0"
         rxPermissionVersion = "0.10.2"
@@ -43,13 +43,13 @@ buildscript {
 
         iconicsVersion = "3.1.0"
         mpAndroidChartVersion = "v3.1.0-alpha"
-        materialDialogsVersion = "2.0.0-rc1"
+        materialDialogsVersion = "2.0.0-rc3"
         communityMaterialTypefaceVersion = "2.7.94.1"
 
         strictModeCompatVersion = "0b97c52b72"
 
-        junitVersion = "5.3.1"
-        kluentVersion = "1.43"
+        junitVersion = "5.3.2"
+        kluentVersion = "1.44"
         mockkVersion = "1.8.13"
         archTestingVersion = "1.1.1"
         kotlinJsonAssertVersion = "0.1.0"
@@ -61,9 +61,12 @@ buildscript {
         gradlePluginPortal()
         google()
         jcenter()
+        maven { url 'https://storage.googleapis.com/r8-releases/raw' }
     }
 
     dependencies {
+        classpath 'com.android.tools:r8:1.3.42'
+
         classpath "com.android.tools.build:gradle:$androidGradlePluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:$junitPluginVersion"
@@ -166,8 +169,8 @@ dependencies {
 
     implementation "com.android.support:multidex:$multidexVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
-    implementation "androidx.cardview:cardview:$recyclerviewVersion"
-    implementation "androidx.recyclerview:recyclerview:$cardviewVersion"
+    implementation "androidx.cardview:cardview:$cardviewVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerviewVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     implementation "com.google.android.material:material:$materialDesignVersion"
 
