--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,18 @@ buildscript {
         gradleVersion = "5.0"
 
         kotlinVersion = "1.3.11"
-        playServicesVersion = "16.0.0"
         kickprotocolVersion = "9f2ea9ec31"
 
-        multidexVersion = '1.0.3'
+        googleServicesVersion = "4.0.1"
+        playServicesVersion = "16.0.1"
+        crashlyticsVersion = "2.9.7"
+        firebaseVersion = "16.0.6"
+        fabricVersion = "1.26.1"
+        nearbyVersion = "16.0.0"
+
+        multidexVersion = "1.0.3"
         lifecycleVersion = "2.0.0"
+        androidKtxVersion = "1.0.1"
 
         androidGradlePluginVersion = "3.4.0-alpha07"
         gradleVersionsPluginVersion = "0.20.0"
@@ -61,6 +68,7 @@ buildscript {
         gradlePluginPortal()
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
         maven { url 'https://storage.googleapis.com/r8-releases/raw' }
     }
 
@@ -70,6 +78,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:$androidGradlePluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:$junitPluginVersion"
+
+        classpath "com.google.gms:google-services:$googleServicesVersion"
+        classpath "io.fabric.tools:gradle:$fabricVersion"
 
         classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:$jacocoPluginVersion"
         classpath "com.github.ben-manes:gradle-versions-plugin:$gradleVersionsPluginVersion"
@@ -88,6 +99,9 @@ apply plugin: "com.vanniktech.android.junit.jacoco"
 apply plugin: "com.github.ben-manes.versions"
 apply plugin: "org.jlleitschuh.gradle.ktlint"
 apply plugin: "io.gitlab.arturbosch.detekt"
+
+apply plugin: "com.google.gms.google-services"
+apply plugin: "io.fabric"
 
 android {
     compileSdkVersion 28
@@ -168,13 +182,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
     implementation "com.android.support:multidex:$multidexVersion"
+    implementation "androidx.core:core-ktx:$androidKtxVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.cardview:cardview:$cardviewVersion"
     implementation "androidx.recyclerview:recyclerview:$recyclerviewVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     implementation "com.google.android.material:material:$materialDesignVersion"
 
-    implementation "com.google.android.gms:play-services-nearby:$playServicesVersion"
+    implementation "com.google.firebase:firebase-core:$firebaseVersion"
+    implementation "com.google.android.gms:play-services-nearby:$nearbyVersion"
+    implementation "com.crashlytics.sdk.android:crashlytics:$crashlyticsVersion"
+
     implementation "com.github.smartsquareGmbh:kickprotocol:$kickprotocolVersion"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
@@ -223,6 +241,10 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
 }
 
+configurations.all {
+    resolutionStrategy.force "com.google.android.gms:play-services-basement:$playServicesVersion"
+}
+
 tasks.withType(KotlinCompile).all {
     kotlinOptions {
         freeCompilerArgs = ["-Xjsr305=strict", "-progressive"]
@@ -230,7 +252,7 @@ tasks.withType(KotlinCompile).all {
 }
 
 detekt {
-    version = detektVersion
+    toolVersion = detektVersion
 
     input = files("$projectDir/src/main/kotlin")
     config = files("$projectDir/config/detekt/detekt.yml")
