--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         multidexVersion = '1.0.3'
         lifecycleVersion = "2.0.0"
 
-        androidGradlePluginVersion = "3.4.0-alpha07"
+        androidGradlePluginVersion = '3.3.2'
         gradleVersionsPluginVersion = "0.20.0"
         junitPluginVersion = "1.3.1.1"
         ktlintGradleVersion = "6.3.1"
